syntax = "proto2";
package protos;

import "hyperparams.proto";
import "dnn.proto";

enum WideOrDeep {
    DEEP = 0;
    WIDE = 1;
    WIDE_AND_DEEP = 2;
}

message AttentionCombiner {
}

message MultiHeadAttentionCombiner {
}

message TextCnnCombiner {
    repeated uint32 filter_sizes = 1;
    repeated uint32 num_filters = 2;
}

message SequenceCombiner {
    oneof combiner {
        AttentionCombiner attention = 1;
        MultiHeadAttentionCombiner multi_head_attention = 2;
        TextCnnCombiner text_cnn = 3;
    }
}

message FeatureConfig {
    enum FeatureType {
        SparseFeat = 0;
        VarLenFeat = 1;
        DenseFeat = 2;
        BucketFeat = 3;
    }

    enum FieldType {
        INT32 = 0;
        INT64 = 1;
        STRING = 2;
        FLOAT = 4;
        DOUBLE = 5;
        BOOL = 6;
    }

    optional string feature_name = 1;

    // input field names: must be included in DatasetConfig.input_fields
    repeated string input_names = 2;
    required FeatureType feature_type = 3 [default = SparseFeat];
    optional string embedding_name = 4 [default = ''];
    optional uint32 embedding_dim = 5 [default = 0];

    optional uint64 hash_bucket_size = 6 [default = 0];
    // for categorical_column_with_identity
    optional uint64 num_buckets = 7 [default = 0];

    // only for raw features
    repeated double boundaries = 8;

    // separator with in features
    optional string separator = 9 [default = '|'];

    // delimeter to separator key from value
    optional string kv_separator = 10;

    // delimeter to separate sequence multi-values
    optional string seq_multi_sep = 101;

    optional string vocab_file = 11;
    repeated string vocab_list = 12;

    // many other field share this config
    repeated string shared_names = 16;

    // lookup max select element number, default 10
    optional int32 lookup_max_sel_elem_num = 17 [default = 10];

    // max_partitions
    optional int32 max_partitions = 18 [default = 1];

    // combiner
    optional string combiner = 19 [default = 'mean'];

    // embedding initializer
    optional Initializer initializer = 20;

    // number of digits kept after dot in format float/double to string
    // scientific format is not used.
    // in default it is not allowed to convert float/double to string
    optional int32 precision = 21 [default = -1];

    // normalize raw feature to [0-1]
    optional double min_val = 22 [default=0.0];
    optional double max_val = 23 [default=0.0];

    // raw feature of multiple dimensions
    optional uint32 raw_input_dim = 24 [default=1];

    // sequence feature combiner
    optional SequenceCombiner sequence_combiner = 25;

    // sub feature type for sequence feature
    optional FeatureType sub_feature_type = 26 [default = SparseFeat];

    // sequence length
    optional uint32 sequence_length = 27 [default = 1];

    // for expr feature
    optional string expression = 30;

    // use embedding variables
    optional bool use_embedding_variable = 31 [default=false];

    // sub_field_type
    optional FieldType sub_field_type = 32 [default=STRING];

    // weight_name
    optional string weight_name = 33;
}

message FeatureConfigV2 {
    repeated FeatureConfig features = 1 ;
}

message FeatureGroupConfig {
    optional string group_name = 1;
    repeated string feature_names = 2;

    optional WideOrDeep wide_deep = 3 [default = DEEP];
    repeated SeqAttGroupConfig sequence_features = 4;
}

message SeqAttMap {
    repeated string key = 1;
    repeated string hist_seq = 2;
}

message SeqAttGroupConfig {
    optional string group_name = 1;
    repeated SeqAttMap seq_att_map = 2;
    optional bool tf_summary = 3 [default = false];
    optional DNN seq_dnn = 4;
    optional bool allow_key_search = 5 [default = false];
}
